fixed dropdown menus z-index bug

--- a/src/sass/materialnote.scss
+++ b/src/sass/materialnote.scss
@@ -582,6 +582,7 @@
     z-index: 500;
     background-color: $toolbar-color;
     position: relative;
+    display:table-row;
 }
 
 .note-popover .popover-content, .panel-heading.note-toolbar {
